# ZenerEstimation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
datasets/: README.md
datasets/raw/: 732B-5610110.csv  732B-5610410.csv
docs/: ARCHITECTURE.md  DEVELOPMENT_HISTORY.md  RELEASE_NOTES.md  Sprint_2.docx  development_flow.docx  git_history.docx  roadmap.docx  validation_pipeline.docx  ~$oadmap.docx  ~$peline.docx  ~$rint_2.docx  ~$velopment_flow.docx  ~WRL1079.tmp  ~WRL3889.tmp
docs/draft/: ZenerEstimation.docx  development_flow.docx  pipeline.docx  roadmap.docx
examples/: dataset_demo.py  demo_arima.py  demo_kalman.py  demo_rul.py  smart_loader_demo.py
results/: README.md
tests/: conftest.py  dummy_kalman.py  dummy_model.py  test_analysis.py  test_arima.py  test_base_model.py  test_clean.py  test_csv_loader.py  test_dataset.py  test_features.py  test_forecast_plot.py  test_forecast_result.py  test_frequency.py  test_missing.py  test_missing_periods.py  test_montecarlo.py  test_pipeline.py  test_plot.py  test_plot_dataset.py  test_registry.py  test_report.py  test_resampling.py  test_results.py  test_rul.py  test_sequence_scaler.py  test_smart_loader.py  test_statistics.py  test_summary.py  test_threshold.py  test_validation.py  test_window_generator.py  test_windows.py
zenerestimation/: __init__.py  data.py  exceptions.py  experiment.py  pipeline.py  version.py
zenerestimation/core/: config.py  pipeline.py
zenerestimation/data/: __init__.py  analysis.py  dataset.py  diagnostics.py  features.py  preprocessing.py  (+2 more)
(+31 files in other folders)
